--- a/src/Components/myStyles.css
+++ b/src/Components/myStyles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+
 .wrapper {
     height: 100vh;
     width: 40%;
@@ -5,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Raleway', sans-serif;
   }
 
   .form-wrapper {
@@ -38,6 +41,7 @@
     background-color: #1D315B;
     color: #d6d1d5;
     font-size: 1.2em;
+    font-family: 'Raleway', sans-serif;
   }
 
   input:placeholder {
@@ -86,6 +90,7 @@ button {
     border-radius: 8px;
     background-color: #189db7;
     color: #d6d1d5;
+    font-family: 'Raleway', sans-serif;
 }
   
 button:hover {
@@ -96,7 +101,7 @@ button:hover {
 
 .error {
     color:#db2269;
-    font-size: 14px;
+    font-size: 20px;
     display: inline-flex;
     margin-bottom: 10px;
     font-weight: bolder;
