--- a/src/Components/myStyles.css
+++ b/src/Components/myStyles.css
@@ -107,3 +107,75 @@ button:hover {
     font-weight: bolder;
 }
 
+
+.container{
+    width: 150vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Raleway', sans-serif;
+    color: #d6d1d5;;
+}
+.card{
+    width: 450px;
+    height: 300px;
+    position: relative;
+    background-color: #1D315B;
+    box-shadow: 0px 0px 30px #9fa1a6;
+    border-radius: 40px;
+    padding: 30px;
+}
+
+
+h2{
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+
+.card .mid{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
+.card .mid .card-number span{
+    border: 2px solid #189db7;;
+    padding: 8px 10px;
+    display: inline-block;
+    font-size: 20px;
+}
+
+.card-number span {
+    margin: 5px;
+    width: 250px;
+    height: 22px;
+}
+
+.card .bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+}
+.card .bottom span{
+    display: inline-block;
+    border: 2px solid #189db7;;
+    padding: 8px 10px;
+    font-size: 20px;
+    margin-top: 10px;
+    text-transform: uppercase;
+}
+
+.card .bottom .card-holder span{
+    width: 190px;
+    height: 22px;
+}
+.bottom span + span{
+    margin-left: 5px;
+}
+
+.card .bottom .cvv span{
+    width: 30px;
+    height: 22px;
+}
