--- a/src/Components/myStyles.css
+++ b/src/Components/myStyles.css
@@ -119,11 +119,12 @@ button:hover {
 .card{
     width: 450px;
     height: 300px;
-    position: relative;
+    position: absolute;
     background-color: #1D315B;
     box-shadow: 0px 0px 30px #9fa1a6;
     border-radius: 40px;
     padding: 30px;
+    top: 230px;
 }
 
 
